--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "ps-tree": "^1.2.0",
         "rimraf": "^3.0.2",
         "ripemd160": "^2.0.2",
-        "tiny-secp256k1": "^2.1.1"
+        "tiny-secp256k1": "^2.1.1",
+        "wait-port": "^0.2.9"
     }
 }
