--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -9,9 +9,9 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     name: Build & Test
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, linux ]
 
     steps:
       - name: Checkout code
