--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Build & Test
-    runs-on: [ self-hosted, linux ]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
