--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@provenance/cavendish",
+    "name": "@provenanceio/cavendish",
     "description": "One-step Provenance blockchain",
     "homepage": "https://provenance.io/",
     "version": "1.7.5",
