--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@provenanceio/cavendish",
     "description": "One-step Provenance blockchain",
     "homepage": "https://provenance.io/",
-    "version": "1.7.6-beta3",
+    "version": "1.8.0",
     "private": false,
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -22,8 +22,8 @@
     },
     "license": "Apache-2.0",
     "scripts": {
-        "build": "npx tsc",
-        "clean": "npx rimraf lib",
+        "build": "npx tsc && ./scripts/install-bins",
+        "clean": "npx rimraf lib && ./scripts/uninstall-bins",
         "prepublishOnly": "npm run build",
         "rebuild": "npm run clean && npm run build",
         "test": "export NODE_ENV=test && mocha --require ts-node/register test/**/*.test.ts"
@@ -36,10 +36,13 @@
         "@types/rimraf": "^3.0.2",
         "@types/ripemd160": "^2.0.0",
         "chai": "^4.3.4",
+        "download": "^8.0.0",
         "eslint": "^8.2.0",
+        "fs-extra": "^10.1.0",
         "mocha": "^9.1.2",
         "ts-node": "^10.2.1",
-        "typescript": "^4.4.4"
+        "typescript": "^4.4.4",
+        "unzipper": "^0.10.11"
     },
     "dependencies": {
         "bech32": "^2.0.0",
@@ -54,5 +57,19 @@
         "ripemd160": "^2.0.2",
         "tiny-secp256k1": "^2.1.1",
         "wait-port": "^0.2.9"
+    },
+    "provenance": {
+        "downloadUrl": "https://github.com/provenance-io/provenance/releases/download/v%VERSION%/provenance-%PLATFORM%-%ARCH%-v%VERSION%.zip",
+        "plaforms": {
+            "amd64": [
+                "darwin",
+                "linux"
+            ]
+        },
+        "aliases": {
+            "amd64": [
+                "x64"
+            ]
+        }
     }
 }
